template index has been changed

--- a/winter-2022-course/template/index.html
+++ b/winter-2022-course/template/index.html
@@ -7,4 +7,9 @@
     <link href="css/style.css" rel="stylesheet">
     <title>Lesson N:Dobraccoon HW</title>
 </head>
+<body>
+	<div class="wrapper">
+		
+	</div>
+</body>
 </html>
