--- a/winter-2022-course/lesson5/css/null.css
+++ b/winter-2022-course/lesson5/css/null.css
@@ -1,47 +1,45 @@
-/* Обнуляющий стиль */
+/* ОБНУЛЕНИЕ СТИЛЕЙ */
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    border: 0;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	box-sizing: border-box;
 }
-
 li {
-    list-style: none;
+	list-style: none;
 }
-
-a {
-    color: inherit;
-}
-
 a,
 a:visited {
-    text-decoration: none;
+	text-decoration: none;
 }
-
 a:hover {
-    text-decoration: none;
+	text-decoration: none;
 }
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-weight: inherit;
-    font-size: inherit;
+	font-weight: inherit;
+	font-size: inherit;
 }
-
 img {
-    vertical-align: top;
+	vertical-align: top;
 }
-
-body,
+html,
+body {
+	height: 100%;
+}
 html {
-    height: 100%;
-    line-height: 1;
+	font-size: 16px; /* по умолчанию */
 }
-
-/* ================================================================ */
+body {
+	line-height: 1;
+}
+.wrapper {
+	min-height: 100%;
+	overflow: hidden;
+}
