main page logo has been changed

--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,25 @@
 h1 {
-    color: rgb(93, 93, 93);
+  color: rgb(93, 93, 93);
 }
 
 a {
-    text-decoration: none;
-    color: rgb(82, 145, 197);
+  text-decoration: none;
+  color: rgb(82, 145, 197);
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
-img {
-    width: 100px;
-    bottom: auto;
+.dobraccoon-logo {
+  display: inline-block;
+  width: 134px;
+  border-radius: 50%;
+  box-shadow: 5px 5px 5px rgb(132, 179, 223);
+  background-color: rgb(197, 240, 236);
+}
+.dobraccoon-logo img {
+  width: 100px;
+  bottom: auto;
+  padding-left: 10px;
 }
