--- a/winter-2022-course/homeworks/hw-lesson07/css/style.css
+++ b/winter-2022-course/homeworks/hw-lesson07/css/style.css
@@ -15,23 +15,30 @@
 .auto-motive {
   margin: 280px 647px 0px 210px;
   max-width: 583px;
-  max-height: 112px;
+  min-height: 112px;
   font-size: 56px;
   font-family: "Roboto";
   line-height: 56px;
 }
 
 .appointment-button {
+  border-radius: 2px;
+  margin: 48px 0px 312px 210px;
+  width: 211px;
+  height: 48px;
+  background: #c40b0b;
+  background-image: url("../img/button-treatment.png");
+  background-repeat: no-repeat;
+  background-position: right;
+}
+.appointment-button > p {
   font-family: "Roboto";
   font-weight: 700;
-  /* font-size: 12px; */
+  font-size: 12px;
+  color: #ffff;
   line-height: 24px;
   align-items: center;
   letter-spacing: 0.15px;
   text-transform: uppercase;
-  border-radius: 2px;
-  margin: 48px 1019px 312px 210px;
-  width: 211px;
-  height: 48px;
-  background: #c40b0b;
+  width: 169px;
 }
