HW lesson 07 addaptive has been added

--- a/winter-2022-course/homeworks/hw-lesson07/css/style.css
+++ b/winter-2022-course/homeworks/hw-lesson07/css/style.css
@@ -13,7 +13,7 @@
 }
 
 .auto-motive {
-  margin: 280px 647px 0px 210px;
+  margin: 16% 20% 0px 11.5%;
   max-width: 583px;
   min-height: 112px;
   font-size: 56px;
@@ -23,7 +23,7 @@
 
 .appointment-button {
   border-radius: 2px;
-  margin: 48px 0px 312px 210px;
+  margin: 4% 0 20% 11.5%;
   width: 211px;
   height: 48px;
   background: #c40b0b;
