--- a/winter-2022-course/homeworks/hw-lesson08/css/style.css
+++ b/winter-2022-course/homeworks/hw-lesson08/css/style.css
@@ -34,6 +34,7 @@
   padding-left: 86px;
   background-repeat: no-repeat;
   margin-top: 68px;
+  vertical-align: text-top;
 }
 
 .promise-list > li > *:first-child {
